source/lando/src/test/lando/misc/should_fail/events_no_abbrev.lando
events This cannot have an abbreviation (TCHA)